# MarkdownX

./: README.md  dev_data.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/: base.html  blog.html  create_blog.html  home.html
templates/components/: navbar.html
