[tool.poetry]
name = "blogx"
version = "0.1.0"
description = "This project is a Django/HTMX single-page application"
authors = ["Nguyen Van Dan <nguyenvdan07@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
psycopg2-binary = "^2.9.2"
django-allauth = "^0.46.0"
dj-database-url = "^0.5.0"
whitenoise = "^5.3.0"
django-crispy-forms = "^1.13.0"
crispy-bootstrap5 = "^0.6"
Markdown = "^3.3.6"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.11b1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
